# edo-tensei

./: .gitignore  README.md  pyproject.toml
hooks/: on-session-end.sh  save-with-timeout.sh
src/edo_tensei/: __init__.py  chunker.py  cli.py  db.py  embedder.py  search.py  server.py  service.py
