[project]
name = "edo-tensei"
version = "0.1.0"
description = "Long-term conversational memory for Claude Code using Ruri v3 and SQLite"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26.0",
]

[project.scripts]
edo-tensei = "edo_tensei.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edo_tensei"]
